# marine-kiosk

./: .gitignore  README.md  pyproject.toml  tide_config.json
src/marine_kiosk/: __init__.py  main.py  scraper.py  server.py
web/: app.js  biome.json  index.html  package-lock.json  package.json  style.css
web/expirement/: app.js  index.html  style.css
web/original/: app.js  index.html
web/src/: app.ts  types.ts  utils.ts
web/src/renderers/: astro.ts  currents.ts  tideGraph.ts  weather.ts
web/tidelog/: app.js  index.html  style.css
